[package]
name = "cargo-x"
version = "0.2.0"
authors = ["Liu Chong <mail@liuchong.io>"]
license = "MIT"
repository = "https://github.com/liuchong/cargo-x"
homepage = "https://github.com/liuchong/cargo-x"
description = """
A very simple third-party cargo subcommand to execute a custom command.
"""
keywords = ["x", "exec", "execute", "cmd", "command"]
edition = "2018"

[dependencies]
dirs = "1.0"
serde = "1.0"
serde_derive = "1.0"
toml = "0.4"
