[package]
name = "cargo-x"
version = "0.3.1"
authors = ["Liu Chong <mail@liuchong.io>"]
license = "MIT"
repository = "https://github.com/liuchong/cargo-x"
homepage = "https://github.com/liuchong/cargo-x"
description = """
A very simple third-party cargo subcommand to execute a custom command.
"""
keywords = ["x", "exec", "execute", "cmd", "command"]
edition = "2018"

[package.metadata.x]
lint = "cargo clippy --verbose --all-targets --all-features -- -D warnings"
test = "cargo test --verbose --all --release"
build = "cargo build --verbose --all --release"

[[bin]]
name = "cargo-x"
path = "src/main.rs"

[[bin]]
name = "x"
path = "src/main.rs"

[dependencies]
dirs = "1.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
toml = "0.4"
