[package]
name = "cargo-x"
version = "0.3.6"
authors = ["Liu Chong <mail@liuchong.io>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/liuchong/cargo-x"
homepage = "https://github.com/liuchong/cargo-x"
description = """
A very simple third-party cargo subcommand to execute a custom command.
"""
keywords = ["x", "exec", "execute", "cmd", "command"]
edition = "2018"

[package.metadata.x]
lint = "cargo clippy --verbose --all-targets --all-features --all --release -- -D warnings"
test = "cargo test --verbose --all-targets --all-features --all --release"
build = "cargo build --verbose --all-targets --all-features --all --release"

[lib]
name = "cargo_x"
path = "src/lib.rs"

[profile.release]
panic = 'abort'

[dependencies]
dirs = "1.0"
failure = { version = "0.1", features = ["derive"] }
regex = "1.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.4"
